@@ -802,12 +802,12 @@
                                 <jvmFlag>${MetaspaceSize}</jvmFlag>
                                 <jvmFlag>${MaxMetaspaceSize}</jvmFlag>
                                 <jvmFlag>${MaxDirectMemorySize}</jvmFlag>
-                                <jvmFlag>-XX:+PrintGC</jvmFlag>
-                                <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
+                                <jvmFlag>-Xlog:gc</jvmFlag><!-- jdk9前是-XX:+PrintGC -->
+                                <jvmFlag>-Xlog:gc*</jvmFlag><!-- jdk9前是-XX:+PrintGCDetails-->
                                 <jvmFlag>-Xlog:gc+heap=trace</jvmFlag><!--jdk9前是-XX:+PrintHeapAtGC-->
-<!--                                <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>-->
-<!--                                <jvmFlag>-XX:+PrintGCApplicationConcurrentTime</jvmFlag>-->
-<!--                                <jvmFlag>-XX:+PrintGCApplicationStoppedTime</jvmFlag>-->
+                                <!--                                <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>-->
+                                <!--                                <jvmFlag>-XX:+PrintGCApplicationConcurrentTime</jvmFlag>-->
+                                <!--                                <jvmFlag>-XX:+PrintGCApplicationStoppedTime</jvmFlag>-->
                                 <jvmFlag>-Xlog:ref*=debug</jvmFlag><!-- jdk9前是-XX:+PrintReferenceGC-->
                                 <jvmFlag>-Xlog:gc:gc.log</jvmFlag><!--jdk9前是-XLoggc:gc.log-->
                                 <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
@@ -863,22 +863,22 @@
                 <Xmx>-Xmx512M</Xmx>
             </properties>
         </profile>
-<!--        <profile>-->
-<!--            <id>default-tools</id>-->
-<!--            <activation>-->
-<!--                <jdk>[,1.8]</jdk>-->
-<!--            </activation>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>com.sun</groupId>-->
-<!--                    <artifactId>tools</artifactId>-->
-<!--                    <version>${java.version}</version>-->
-<!--                    <scope>system</scope>-->
-<!--                    <optional>true</optional>-->
-<!--                    <systemPath>${java.home}/../lib/tools.jar</systemPath>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
+        <!--        <profile>-->
+        <!--            <id>default-tools</id>-->
+        <!--            <activation>-->
+        <!--                <jdk>[,1.8]</jdk>-->
+        <!--            </activation>-->
+        <!--            <dependencies>-->
+        <!--                <dependency>-->
+        <!--                    <groupId>com.sun</groupId>-->
+        <!--                    <artifactId>tools</artifactId>-->
+        <!--                    <version>${java.version}</version>-->
+        <!--                    <scope>system</scope>-->
+        <!--                    <optional>true</optional>-->
+        <!--                    <systemPath>${java.home}/../lib/tools.jar</systemPath>-->
+        <!--                </dependency>-->
+        <!--            </dependencies>-->
+        <!--        </profile>-->
         <!--        <profile>-->
         <!--            <id>java9-tools</id>-->
         <!--            <activation>-->
